# xray-anomaly-detection

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  config.py  dataset.py  evaluate.py  export_onnx.py  inference.py  main.ipynb  model.py  pyproject.toml  train.py
data/: README.md
models/: resnet50_chestxray_v1.pth
scripts/: download_data.py
